use tabular fixed alignment for font

--- a/src/Shared.css
+++ b/src/Shared.css
@@ -14,6 +14,7 @@ body,
 * {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
+  font-variant-numeric: tabular-nums;
 }
 
 ::-webkit-scrollbar {
